--- a/Prod Model Flask NLP Example.ipynb
+++ b/Prod Model Flask NLP Example.ipynb
@@ -420,26 +420,44 @@
     "app = Flask(__name__)\n",
     "#CORS(app)\n",
     "\n",
+    "# function to check the file extension\n",
+    "def allowed_file(filename):\n",
+    "    return '.' in filename and \\\n",
+    "           filename.rsplit('.', 1)[1].lower() in ALLOWED_EXTENSIONS\n",
+    "\n",
     "@app.route(\"/\")\n",
     "def home_page():\n",
     "    return render_template('index.html')\n",
     "\n",
-    "@app.route('/review', methods=['GET', 'POST'])\n",
+    "@app.route('/review') #, methods=['GET', 'POST']\n",
     "def predict():\n",
-    "    payload = request.json['data']\n",
-    "    values = [float(i) for i in payload.split(',')]\n",
-    "    \n",
-    "    input_variables = pd.DataFrame([values],\n",
-    "                                columns=headers, \n",
-    "                                dtype=float,\n",
-    "                                index=['input'])\n",
-    "    # Get the model's prediction\n",
-    "    prediction_proba = model.predict_proba(input_variables)\n",
-    "    prediction = (prediction_proba[0])[1]\n",
-    "    \n",
-    "    ret = '{\"prediction\":' + str(float(prediction)) + '}'\n",
-    "    \n",
-    "    return ret\n",
+    "    if request.method == 'POST':\n",
+    "        # check if there is a file in the request\n",
+    "        if 'file' not in request.files:\n",
+    "            return render_template('review.html', msg='No file selected')\n",
+    "        file = request.files['file']\n",
+    "        # if no file is selected\n",
+    "        if file.filename == '':\n",
+    "            return render_template('review.html', msg='No file selected')\n",
+    "\n",
+    "        if file and allowed_file(file.filename):\n",
+    "\n",
+    "            payload = request.json['data']\n",
+    "            values = [float(i) for i in payload.split(',')]\n",
+    "\n",
+    "            input_variables = pd.DataFrame([values],\n",
+    "                                        columns=headers, \n",
+    "                                        dtype=float,\n",
+    "                                        index=['input'])\n",
+    "            # Get the model's prediction\n",
+    "            prediction_proba = model.predict_proba(input_variables)\n",
+    "            prediction = (prediction_proba[0])[1]\n",
+    "\n",
+    "            ret = '{\"prediction\":' + str(float(prediction)) + '}'\n",
+    "\n",
+    "            return ret\n",
+    "    elif request.method == 'GET':\n",
+    "        return render_template('review.html')\n",
     "# running REST interface, port=5000 for direct test\n",
     "if __name__ == \"__main__\":\n",
     "    app.run()"
