add iterative scoring

--- a/Prod Model Flask NLP Example.ipynb
+++ b/Prod Model Flask NLP Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,17 @@
     "\n",
     "from flask import Flask, jsonify, request, render_template\n",
     "from flask_cors import CORS, cross_origin\n",
-    "import pickle"
+    "import pickle\n",
+    "\n",
+    "from nltk import *\n",
+    "#nltk.download('stopwords')\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +207,7 @@
        "4  2015-02-24 11:14:45 -0800            NaN  Pacific Time (US & Canada)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,84 +219,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['neutral', 'positive', 'negative'], dtype=object)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['airline_sentiment'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "features = data.iloc[:, 10].values\n",
-    "labels = data.iloc[:, 1].values\n",
-    "\n",
-    "processed_features = []\n",
-    "\n",
-    "for sentence in range(0, len(features)):\n",
-    "    # Remove all the special characters\n",
-    "    processed_feature = re.sub(r'\\W', ' ', str(features[sentence]))\n",
-    "\n",
-    "    # remove all single characters\n",
-    "    processed_feature= re.sub(r'\\s+[a-zA-Z]\\s+', ' ', processed_feature)\n",
-    "\n",
-    "    # Remove single characters from the start\n",
-    "    processed_feature = re.sub(r'\\^[a-zA-Z]\\s+', ' ', processed_feature) \n",
-    "\n",
-    "    # Substituting multiple spaces with single space\n",
-    "    processed_feature = re.sub(r'\\s+', ' ', processed_feature, flags=re.I)\n",
-    "\n",
-    "    # Removing prefixed 'b'\n",
-    "    processed_feature = re.sub(r'^b\\s+', '', processed_feature)\n",
-    "\n",
-    "    # Converting to Lowercase\n",
-    "    processed_feature = processed_feature.lower()\n",
-    "\n",
-    "    processed_features.append(processed_feature)"
+    "labels = data.iloc[:, 1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk import *\n",
-    "#nltk.download('stopwords')\n",
-    "from nltk.corpus import stopwords\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "def clean_n_vect(feat):\n",
+    "    processed_feats = []\n",
     "\n",
-    "vectorizer = TfidfVectorizer (max_features=2500, min_df=7, max_df=0.8, stop_words=stopwords.words('english'))\n",
-    "processed_features = vectorizer.fit_transform(processed_features).toarray()"
+    "    for sentence in range(0, len(feat)):\n",
+    "        # Remove all the special characters\n",
+    "        processed_feature = re.sub(r'\\W', ' ', str(feat[sentence]))\n",
+    "\n",
+    "        # remove all single characters\n",
+    "        processed_feature= re.sub(r'\\s+[a-zA-Z]\\s+', ' ', processed_feature)\n",
+    "\n",
+    "        # Remove single characters from the start\n",
+    "        processed_feature = re.sub(r'\\^[a-zA-Z]\\s+', ' ', processed_feature) \n",
+    "\n",
+    "        # Substituting multiple spaces with single space\n",
+    "        processed_feature = re.sub(r'\\s+', ' ', processed_feature, flags=re.I)\n",
+    "\n",
+    "        # Removing prefixed 'b'\n",
+    "        processed_feature = re.sub(r'^b\\s+', '', processed_feature)\n",
+    "\n",
+    "        # Converting to Lowercase\n",
+    "        processed_feature = processed_feature.lower()\n",
+    "\n",
+    "        processed_feats.append(processed_feature)\n",
+    "    vectorizer = TfidfVectorizer (max_features=2300, min_df=7, max_df=0.8, stop_words=stopwords.words('english'))\n",
+    "    processed_feats = vectorizer.fit_transform(processed_feats).toarray()\n",
+    "    print(type(processed_feats))\n",
+    "    return processed_feats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
+    "processed_features = clean_n_vect(features)\n",
     "X_train, X_test, y_train, y_test = train_test_split(processed_features, labels, test_size=0.2, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -312,20 +303,20 @@
      "output_type": "stream",
      "text": [
       "Random Forest Classifier model (n_estimators=200.000000):\n",
-      "[[1723  108   39]\n",
-      " [ 326  248   40]\n",
-      " [ 132   58  254]]\n",
+      "[[1726  108   36]\n",
+      " [ 332  243   39]\n",
+      " [ 141   60  243]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative       0.79      0.92      0.85      1870\n",
-      "     neutral       0.60      0.40      0.48       614\n",
-      "    positive       0.76      0.57      0.65       444\n",
+      "    negative       0.78      0.92      0.85      1870\n",
+      "     neutral       0.59      0.40      0.47       614\n",
+      "    positive       0.76      0.55      0.64       444\n",
       "\n",
       "    accuracy                           0.76      2928\n",
-      "   macro avg       0.72      0.63      0.66      2928\n",
-      "weighted avg       0.75      0.76      0.74      2928\n",
+      "   macro avg       0.71      0.62      0.65      2928\n",
+      "weighted avg       0.74      0.76      0.74      2928\n",
       "\n",
-      "  Accuracy: 0.7599043715846995\n"
+      "  Accuracy: 0.755464480874317\n"
      ]
     }
    ],
@@ -346,31 +337,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction:  ['negative' 'negative' 'negative' ... 'negative' 'negative' 'negative']\n",
-      "Probabilities:  [[0.94  0.06  0.   ]\n",
-      " [0.82  0.17  0.01 ]\n",
-      " [0.79  0.105 0.105]\n",
-      " ...\n",
-      " [0.88  0.08  0.04 ]\n",
-      " [0.915 0.025 0.06 ]\n",
-      " [0.93  0.04  0.03 ]]\n"
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rev1 = \"I loved my flight, everything was quick and easy with nice attendants\"\n",
+    "rev2 = \"You have the rudest employees! This lady kicked me off of my flight, unbelievable\"\n",
+    "df = pd.DataFrame({'id': [1,2], 'Review': [rev1,rev2]})\n",
+    "features2 = df.iloc[:, 1].values\n",
+    "featz = np.concatenate((features, features2))\n",
+    "processed_features2 = clean_n_vect(featz)\n",
+    "processed_features2 = processed_features2[-2:]\n",
+    "processed_features2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction:  ['positive' 'negative']\n",
+      "Probabilities:  [[0.41  0.135 0.455]\n",
+      " [0.73  0.095 0.175]]\n"
      ]
     }
    ],
    "source": [
     "# Get the model's prediction\n",
+    "processed_features2.reshape(1, -1)\n",
+    "predictions2 = text_classifier.predict(processed_features2)\n",
     "\n",
-    "print(\"Prediction: \", predictions)\n",
-    "prediction_proba = text_classifier.predict_proba(X_test)\n",
+    "print(\"Prediction: \", predictions2)\n",
+    "prediction_proba = text_classifier.predict_proba(processed_features2)\n",
     "print(\"Probabilities: \", prediction_proba)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
