--- a/Classifier & Flask Deployment/Flask NLP Example.ipynb
+++ b/Classifier & Flask Deployment/Flask NLP Example.ipynb
@@ -32,6 +32,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UserWarning: The Dask Engine for Modin is experimental.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import modin.pandas as mpd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
