Update Airline Sentiment Analysis.ipynb

--- a/Sentiment Classifier/Airline Sentiment Analysis.ipynb
+++ b/Sentiment Classifier/Airline Sentiment Analysis.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\mw21807\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import warnings\n",
@@ -20,15 +30,15 @@
     "import seaborn as sns\n",
     "\n",
     "import re\n",
-    "from nltk import *\n",
-    "#nltk.download('stopwords')\n",
+    "import nltk\n",
+    "nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +81,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>570306133677760513</td>\n",
        "      <td>neutral</td>\n",
        "      <td>1.0000</td>\n",
@@ -89,7 +99,7 @@
        "      <td>Eastern Time (US &amp; Canada)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>570301130888122368</td>\n",
        "      <td>positive</td>\n",
        "      <td>0.3486</td>\n",
@@ -107,7 +117,7 @@
        "      <td>Pacific Time (US &amp; Canada)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>570301083672813571</td>\n",
        "      <td>neutral</td>\n",
        "      <td>0.6837</td>\n",
@@ -125,7 +135,7 @@
        "      <td>Central Time (US &amp; Canada)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>570301031407624196</td>\n",
        "      <td>negative</td>\n",
        "      <td>1.0000</td>\n",
@@ -143,7 +153,7 @@
        "      <td>Pacific Time (US &amp; Canada)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>570300817074462722</td>\n",
        "      <td>negative</td>\n",
        "      <td>1.0000</td>\n",
@@ -201,19 +211,19 @@
        "4  2015-02-24 11:14:45 -0800            NaN  Pacific Time (US & Canada)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"C:\\\\Users\\\\MaryWillcock\\\\Documents\\\\GitHub\\\\NLP_Flask_Test\\\\Classifier & Flask Deployment\\\\tweets.csv\")\n",
+    "data = pd.read_csv(\"tweets.csv\")\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,9 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "processed_features = clean_n_vect(features)\n",
     "X_train, X_test, y_train, y_test = train_test_split(processed_features, labels, test_size=0.2, random_state=0)"
@@ -268,11 +286,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['positive', 'negative', 'negative', ..., 'negative', 'negative',\n",
+       "       'negative'], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eval_metrics(actual, pred):\n",
+    "def eval_metrics(y_test, predictions):\n",
     "        confusionMatrix = confusion_matrix(y_test,predictions)\n",
     "        classificationReport = classification_report(y_test,predictions)\n",
     "        accScore = accuracy_score(y_test, predictions)\n",
@@ -281,37 +320,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_est = 200\n",
-    "text_classifier = RandomForestClassifier(n_estimators=n_est, random_state=0)\n",
-    "text_classifier.fit(X_train, y_train)\n",
+    "def train(in_n_est):\n",
+    "    # Set default values if no n_est is provided\n",
+    "    if int(in_n_est) is None:\n",
+    "        n_est = 200\n",
+    "    else:\n",
+    "        n_est = int(in_n_est) \n",
+    "        \n",
+    "    text_classifier = RandomForestClassifier(n_estimators=n_est, random_state=0)\n",
+    "    text_classifier.fit(X_train, y_train)\n",
     "\n",
-    "predictions = text_classifier.predict(X_test)\n",
+    "    predictions = text_classifier.predict(X_test)\n",
     "\n",
-    "(confusionMatrix, classificationReport, accScore) = eval_metrics(y_test, predictions)\n",
+    "    (confusionMatrix, classificationReport, accScore) = eval_metrics(y_test, predictions)\n",
     "\n",
-    "print(\"Random Forest Classifier model (n_estimators=%f):\" % (n_est))\n",
-    "print(confusionMatrix)\n",
-    "print(classificationReport)\n",
-    "print(\"  Accuracy: %s\" % accScore)"
+    "    print(\"Random Forest Classifier model (n_estimators=%f):\" % (n_est))\n",
+    "    print(confusionMatrix)\n",
+    "    print(classificationReport)\n",
+    "    print(\"  Accuracy: %s\" % accScore)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier model (n_estimators=200.000000):\n",
+      "[[1726  108   36]\n",
+      " [ 332  243   39]\n",
+      " [ 141   60  243]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.78      0.92      0.85      1870\n",
+      "     neutral       0.59      0.40      0.47       614\n",
+      "    positive       0.76      0.55      0.64       444\n",
+      "\n",
+      "    accuracy                           0.76      2928\n",
+      "   macro avg       0.71      0.62      0.65      2928\n",
+      "weighted avg       0.74      0.76      0.74      2928\n",
+      "\n",
+      "  Accuracy: 0.755464480874317\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(200)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier model (n_estimators=50.000000):\n",
+      "[[1711  119   40]\n",
+      " [ 327  250   37]\n",
+      " [ 149   63  232]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.78      0.91      0.84      1870\n",
+      "     neutral       0.58      0.41      0.48       614\n",
+      "    positive       0.75      0.52      0.62       444\n",
+      "\n",
+      "    accuracy                           0.75      2928\n",
+      "   macro avg       0.70      0.61      0.65      2928\n",
+      "weighted avg       0.73      0.75      0.73      2928\n",
+      "\n",
+      "  Accuracy: 0.7489754098360656\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier model (n_estimators=500.000000):\n",
+      "[[1722  109   39]\n",
+      " [ 325  247   42]\n",
+      " [ 135   60  249]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.79      0.92      0.85      1870\n",
+      "     neutral       0.59      0.40      0.48       614\n",
+      "    positive       0.75      0.56      0.64       444\n",
+      "\n",
+      "    accuracy                           0.76      2928\n",
+      "   macro avg       0.71      0.63      0.66      2928\n",
+      "weighted avg       0.74      0.76      0.74      2928\n",
+      "\n",
+      "  Accuracy: 0.7575136612021858\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(500)"
+   ]
   },
   {
    "cell_type": "code",
@@ -337,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
